--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -17,7 +17,8 @@
     text-align: center;
     font-weight: 700;
     font-size: 24px;
-    margin: 2em 0;
+    margin-top: 24px;
+    margin-bottom: 16px;
 }
 
 .contact__text {
@@ -77,15 +78,13 @@
     height: 1.15em;
 }
 
-
-
 .copyright {
     margin-top: 3em;
     color: var(--font-white);
     font-size: 0.6rem;
     font-weight: 200;
     text-align: center;
-    padding-bottom: 7.2em;
+    padding-bottom: 32px;
 }
 
 .link_devs {
@@ -123,7 +122,6 @@
     }
 
     .contact__title {
-        margin-top: 0em;
         padding-top: 2em;
     }
   
@@ -232,12 +230,8 @@
     }
 
     .contact__title {
-        font-size: 2rem;
-        margin-top: 2em;
-    }
-
-    .contact__title {
         font-size: 3rem;
+        margin-top: 40px;
     }
 
     .contact__email {
