--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,12 +7,12 @@
   background-repeat: no-repeat;
   position: fixed;
   width: 100vw;
-  height: 12vh;
+  height: 70px;
   z-index: 10;
 }
 
 .logo-new {
-  width: 6em;
+  height: 70px;
 }
 
 .motion-logo {
@@ -23,7 +23,7 @@
   display: flex;
   padding: 1.8em;
   justify-content: space-between;
-  height: 12vh;
+  height: 70px;
   align-items: center;
 }
 
@@ -84,18 +84,18 @@
   font-weight: 700;
 }
 
+.menu__link:hover {
+  color: var(--secundary-color);
+}
+
 .menu__link:visited {
   color: white;
 }
 
 @media screen and (min-width: 480px) and (orientation: landscape) {
 
-  .header__box-new {
-    height: 4em;
-  }
 
   .container-new {
-    height: 4em;
     margin: 0 1.5em;
   }
 
@@ -111,23 +111,17 @@
 
   /* Header */
 
-  .header__box-new {
-    background-image: var(--font-purple);
-    height: 6em;
-  }
 
   .container-new {
     display: flex;
     padding: 0 4.7em;
     justify-content: space-between;
-    height: 6em;
     align-items: center;
     max-width: 1440px;
     margin: auto;
   }
 
   .logo-new {
-    width: 6.5em;
     margin-left: 2em;
   }
 
@@ -184,24 +178,14 @@
 }
 
 @media screen and (min-width: 1440px) and (max-width: 2559px){
-  .header__box-new {
-    background-image: var(--font-purple);
-    height: 7em;
-  }
     
   .container-new {
     display: flex;
     padding: 0 4.7em;
     justify-content: space-between;
-    height: 7em;
     align-items: center;
     max-width: 1440px;
     margin: auto;
-  }
-    
-  .logo-new {
-    width: 7.5em;
-    margin-left: 2em;
   }
 
   .motion-logo {
@@ -240,27 +224,15 @@
 }
   
 
-
 @media screen and (min-width: 2560px) {
-
-  .header__box-new {
-    background-image: var(--font-purple);
-    height: 11em;
-  }
     
   .container-new {
     display: flex;
     padding: 0 4.7em;
     justify-content: space-between;
-    height: 11em;
     align-items: center;
     max-width: 1440px;
     margin: auto;
-  }
-    
-  .logo-new {
-    width: 9.5em;
-    margin-left: 2em;
   }
 
   .motion-logo {
