--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -269,7 +269,7 @@
     }
 
     #pre-portfolio {
-        top: 120%;
+        top: 850px;
     }
 
 
@@ -322,7 +322,7 @@
 @media screen and (min-width: 1440px) and (max-width: 2559px) {
 
     #pre-portfolio {
-        top: 110%;
+        top: 950px;
     }
 
     /*Portfolio */
@@ -439,12 +439,10 @@
         font-size: 1.2rem;
     }
 
-
-
     /*Portfolio */
 
     #pre-portfolio {
-        top: 65%;
+        top: 1300px;
     }
 
     .portfolio__title {
