--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 } */
 
 .about {
-    padding: 50px 30px;
+    padding: 50px 30px 0 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +44,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin: 1.6em auto 2em auto;
 }
 
 .founder__img {
@@ -62,8 +61,9 @@
 }
 
 .founder__subtitle {
-    color: #1b6c5a;
+    color: var(--secundary-color);
     font-size: 0.8rem;
+    margin-bottom: 0;
 }
 
 #pre-portfolio {
@@ -77,7 +77,7 @@
 
 .portfolio {
     position: relative;
-    padding: 0 1.8em;
+    padding: 60px 24px 0 24px;
     margin-bottom: 3.5em;
 }
 
@@ -147,7 +147,6 @@
     .about__founder {
         display: flex;
         text-align: center;
-        margin: 2rem;
         flex-direction: row;
         gap: 0.3em;
     }
@@ -222,6 +221,11 @@
     .about {
         width: 80%;
         margin: auto;
+        flex-direction: row;
+    }
+
+    .about__description {
+        min-width: 60%;
     }
 
     .about__title {
@@ -243,13 +247,13 @@
     .about__founder {
         display: flex;
         text-align: center;
-        margin: 2rem;
         flex-direction: row;
     }
 
     .founder__img {
-        width: 35%;
-        margin: 1em auto 0.5em auto;
+        width: 70%;
+        margin: 0;
+        margin: 70px 0 10px 0;
     }
 
     .founder__title {
@@ -266,6 +270,7 @@
     .founder {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     #pre-portfolio {
@@ -319,7 +324,7 @@
 }
 
 
-@media screen and (min-width: 1440px) and (max-width: 2559px) {
+@media screen and (min-width: 1440px)  {
 
     #pre-portfolio {
         top: 950px;
@@ -356,6 +361,11 @@
     .about {
         width: 65%;
         margin: auto;
+        flex-direction: row;
+    }
+
+    .about__description {
+        min-width: 60%;
     }
 
     .about__title {
@@ -380,8 +390,9 @@
     }
 
     .founder__img {
-        width: 45%;
-        margin: 1em auto 0.5em auto;
+        width: 50%;
+        margin: 0;
+        margin: 70px 0 10px 0;
     }
 
     #contact {
@@ -394,16 +405,10 @@
 
 @media screen and (min-width: 2560px) {
 
-    /* #pre-about {
-        height: 5em;
-        position: absolute;
-        top: 1280px;
-    } */
-
     /* About */
 
     .about {
-        padding: 70px 400px;
+        padding: 70px 280px;
     }
 
     .about__title {
@@ -444,6 +449,12 @@
     #pre-portfolio {
         top: 1300px;
     }
+
+    .portfolio {
+        position: relative;
+        padding: 60px 124px 0 124px;
+        margin-bottom: 3.5em;
+    }    
 
     .portfolio__title {
         font-size: 1.8rem;
